updated to java 9 standards